cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09736_391090992.yaml
Resources:
  IPv6DemoF68C6529:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: NetworkStack/IPv6Demo
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/Resource
  IPv6DemofrontSubnet1Subnet50765A77:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      VpcId:
        Ref: IPv6DemoF68C6529
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      Ipv6CidrBlock:
        Fn::Select:
          - 0
          - Fn::Cidr:
              - Fn::Select:
                  - 0
                  - Fn::GetAtt:
                      - IPv6DemoF68C6529
                      - Ipv6CidrBlocks
              - 256
              - "64"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: front
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: NetworkStack/IPv6Demo/frontSubnet1
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/frontSubnet1/Subnet
  IPv6DemofrontSubnet1RouteTable9CB4A2C6:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: IPv6DemoF68C6529
      Tags:
        - Key: Name
          Value: NetworkStack/IPv6Demo/frontSubnet1
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/frontSubnet1/RouteTable
  IPv6DemofrontSubnet1RouteTableAssociationD4B37282:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: IPv6DemofrontSubnet1RouteTable9CB4A2C6
      SubnetId:
        Ref: IPv6DemofrontSubnet1Subnet50765A77
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/frontSubnet1/RouteTableAssociation
  IPv6DemofrontSubnet1DefaultRoute6FA9705F:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: IPv6DemofrontSubnet1RouteTable9CB4A2C6
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: IPv6DemoIGW8E57C141
    DependsOn:
      - IPv6DemoCidr62ACD2412
      - IPv6DemoVPCGWA3D2C2B2
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/frontSubnet1/DefaultRoute
  IPv6DemofrontSubnet1EIP321EE23C:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: NetworkStack/IPv6Demo/frontSubnet1
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/frontSubnet1/EIP
  IPv6DemofrontSubnet1NATGateway9B1C636A:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId:
        Ref: IPv6DemofrontSubnet1Subnet50765A77
      AllocationId:
        Fn::GetAtt:
          - IPv6DemofrontSubnet1EIP321EE23C
          - AllocationId
      Tags:
        - Key: Name
          Value: NetworkStack/IPv6Demo/frontSubnet1
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/frontSubnet1/NATGateway
  IPv6DemofrontSubnet1DefaultRoute6178F8239:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: IPv6DemofrontSubnet1RouteTable9CB4A2C6
      DestinationIpv6CidrBlock: ::/0
      GatewayId:
        Ref: IPv6DemoIGW8E57C141
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/frontSubnet1/DefaultRoute6
  IPv6DemofrontSubnet2Subnet94A64DC1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      VpcId:
        Ref: IPv6DemoF68C6529
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      Ipv6CidrBlock:
        Fn::Select:
          - 1
          - Fn::Cidr:
              - Fn::Select:
                  - 0
                  - Fn::GetAtt:
                      - IPv6DemoF68C6529
                      - Ipv6CidrBlocks
              - 256
              - "64"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: front
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: NetworkStack/IPv6Demo/frontSubnet2
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/frontSubnet2/Subnet
  IPv6DemofrontSubnet2RouteTableB320833B:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: IPv6DemoF68C6529
      Tags:
        - Key: Name
          Value: NetworkStack/IPv6Demo/frontSubnet2
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/frontSubnet2/RouteTable
  IPv6DemofrontSubnet2RouteTableAssociationF797CC70:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: IPv6DemofrontSubnet2RouteTableB320833B
      SubnetId:
        Ref: IPv6DemofrontSubnet2Subnet94A64DC1
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/frontSubnet2/RouteTableAssociation
  IPv6DemofrontSubnet2DefaultRoute8C5074B4:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: IPv6DemofrontSubnet2RouteTableB320833B
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: IPv6DemoIGW8E57C141
    DependsOn:
      - IPv6DemoCidr62ACD2412
      - IPv6DemoVPCGWA3D2C2B2
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/frontSubnet2/DefaultRoute
  IPv6DemofrontSubnet2DefaultRoute6DF728CA3:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: IPv6DemofrontSubnet2RouteTableB320833B
      DestinationIpv6CidrBlock: ::/0
      GatewayId:
        Ref: IPv6DemoIGW8E57C141
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/frontSubnet2/DefaultRoute6
  IPv6DemobackSubnet1SubnetC7CC0851:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.2.0/24
      VpcId:
        Ref: IPv6DemoF68C6529
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      Ipv6CidrBlock:
        Fn::Select:
          - 2
          - Fn::Cidr:
              - Fn::Select:
                  - 0
                  - Fn::GetAtt:
                      - IPv6DemoF68C6529
                      - Ipv6CidrBlocks
              - 256
              - "64"
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: back
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: NetworkStack/IPv6Demo/backSubnet1
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/backSubnet1/Subnet
  IPv6DemobackSubnet1RouteTableB2631F47:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: IPv6DemoF68C6529
      Tags:
        - Key: Name
          Value: NetworkStack/IPv6Demo/backSubnet1
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/backSubnet1/RouteTable
  IPv6DemobackSubnet1RouteTableAssociation9BCB6F2B:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: IPv6DemobackSubnet1RouteTableB2631F47
      SubnetId:
        Ref: IPv6DemobackSubnet1SubnetC7CC0851
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/backSubnet1/RouteTableAssociation
  IPv6DemobackSubnet1DefaultRoute67D28C28:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: IPv6DemobackSubnet1RouteTableB2631F47
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: IPv6DemofrontSubnet1NATGateway9B1C636A
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/backSubnet1/DefaultRoute
  IPv6DemobackSubnet1DefaultRoute6BAB0C3DE:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: IPv6DemobackSubnet1RouteTableB2631F47
      DestinationIpv6CidrBlock: ::/0
      EgressOnlyInternetGatewayId:
        Ref: IPv6DemoEIGW6B0ADD7E1
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/backSubnet1/DefaultRoute6
  IPv6DemobackSubnet2SubnetCDB554B8:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.3.0/24
      VpcId:
        Ref: IPv6DemoF68C6529
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      Ipv6CidrBlock:
        Fn::Select:
          - 3
          - Fn::Cidr:
              - Fn::Select:
                  - 0
                  - Fn::GetAtt:
                      - IPv6DemoF68C6529
                      - Ipv6CidrBlocks
              - 256
              - "64"
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: back
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: NetworkStack/IPv6Demo/backSubnet2
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/backSubnet2/Subnet
  IPv6DemobackSubnet2RouteTable2A5D715E:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: IPv6DemoF68C6529
      Tags:
        - Key: Name
          Value: NetworkStack/IPv6Demo/backSubnet2
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/backSubnet2/RouteTable
  IPv6DemobackSubnet2RouteTableAssociationBBA9BC4A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: IPv6DemobackSubnet2RouteTable2A5D715E
      SubnetId:
        Ref: IPv6DemobackSubnet2SubnetCDB554B8
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/backSubnet2/RouteTableAssociation
  IPv6DemobackSubnet2DefaultRouteE091369E:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: IPv6DemobackSubnet2RouteTable2A5D715E
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: IPv6DemofrontSubnet1NATGateway9B1C636A
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/backSubnet2/DefaultRoute
  IPv6DemobackSubnet2DefaultRoute634DE9F50:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: IPv6DemobackSubnet2RouteTable2A5D715E
      DestinationIpv6CidrBlock: ::/0
      EgressOnlyInternetGatewayId:
        Ref: IPv6DemoEIGW6B0ADD7E1
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/backSubnet2/DefaultRoute6
  IPv6DemodatabaseSubnet1SubnetBB1439C8:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.4.0/24
      VpcId:
        Ref: IPv6DemoF68C6529
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      Ipv6CidrBlock:
        Fn::Select:
          - 4
          - Fn::Cidr:
              - Fn::Select:
                  - 0
                  - Fn::GetAtt:
                      - IPv6DemoF68C6529
                      - Ipv6CidrBlocks
              - 256
              - "64"
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: database
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: NetworkStack/IPv6Demo/databaseSubnet1
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/databaseSubnet1/Subnet
  IPv6DemodatabaseSubnet1RouteTableC6BBF6FF:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: IPv6DemoF68C6529
      Tags:
        - Key: Name
          Value: NetworkStack/IPv6Demo/databaseSubnet1
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/databaseSubnet1/RouteTable
  IPv6DemodatabaseSubnet1RouteTableAssociationABDFC00F:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: IPv6DemodatabaseSubnet1RouteTableC6BBF6FF
      SubnetId:
        Ref: IPv6DemodatabaseSubnet1SubnetBB1439C8
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/databaseSubnet1/RouteTableAssociation
  IPv6DemodatabaseSubnet2SubnetAF939155:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.5.0/24
      VpcId:
        Ref: IPv6DemoF68C6529
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      Ipv6CidrBlock:
        Fn::Select:
          - 5
          - Fn::Cidr:
              - Fn::Select:
                  - 0
                  - Fn::GetAtt:
                      - IPv6DemoF68C6529
                      - Ipv6CidrBlocks
              - 256
              - "64"
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: database
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: NetworkStack/IPv6Demo/databaseSubnet2
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/databaseSubnet2/Subnet
  IPv6DemodatabaseSubnet2RouteTableB6A8F5E7:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: IPv6DemoF68C6529
      Tags:
        - Key: Name
          Value: NetworkStack/IPv6Demo/databaseSubnet2
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/databaseSubnet2/RouteTable
  IPv6DemodatabaseSubnet2RouteTableAssociation569607E0:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: IPv6DemodatabaseSubnet2RouteTableB6A8F5E7
      SubnetId:
        Ref: IPv6DemodatabaseSubnet2SubnetAF939155
    DependsOn:
      - IPv6DemoCidr62ACD2412
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/databaseSubnet2/RouteTableAssociation
  IPv6DemoIGW8E57C141:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: NetworkStack/IPv6Demo
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/IGW
  IPv6DemoVPCGWA3D2C2B2:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: IPv6DemoF68C6529
      InternetGatewayId:
        Ref: IPv6DemoIGW8E57C141
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/VPCGW
  IPv6DemoCidr62ACD2412:
    Type: AWS::EC2::VPCCidrBlock
    Properties:
      VpcId:
        Ref: IPv6DemoF68C6529
      AmazonProvidedIpv6CidrBlock: true
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/Cidr6
  IPv6DemoEIGW6B0ADD7E1:
    Type: AWS::EC2::EgressOnlyInternetGateway
    Properties:
      VpcId:
        Ref: IPv6DemoF68C6529
    Metadata:
      aws:cdk:path: NetworkStack/IPv6Demo/EIGW6
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAAE12PwW7CMAyGn4V7amglJK6smiYuoyqI65Sm3mYIDkocEEK8+5KVrdNO/v3J+vW5ghnMCm+gnE/0JRSmPxSWOrhtRJuDSugNTQW33cmo+p13Ta2a2Fkym9gxSmZjal0U3OrO4shHtgzBGdJCjn+Pc3heNXm8annRghd9VY2nc4pj8YoFfco/B4PJY1tKUv08IsuD19T7J+uSfm7/8BjCmu31X8ldtRhc9OZbYh3lFIcn/tDacU9Z+K7Y9Qj7MD2XCygrKCf7QFT4yEJHhHaYX+YkB/pOAQAA
    Metadata:
      aws:cdk:path: NetworkStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Outputs:
  Frontendsubnets0:
    Value:
      Ref: IPv6DemofrontSubnet1Subnet50765A77
  Frontendsubnets1:
    Value:
      Ref: IPv6DemofrontSubnet2Subnet94A64DC1
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store.
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                  - "4"
                  - "5"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
